--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# node_modules 제외
+node_modules/
 
-# testing
-/coverage
+# 환경변수 파일 제외 (보안)
+.env
 
-# production
-/build
-
-# misc
+# macOS 시스템 파일 제외
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
